# LLM_citation_patterns

./: LICENSE  README.md  pyproject.toml
results/: merged_info.csv  merged_references.csv  results_graph_vanilla_1_gpt-4.csv  results_vanilla_1_gpt-4_graph_metadata.csv  sample_vanilla_1.csv
src/: 00_download_data.py  01_postprocess_data.py  02_semantic_data.py  03_call_LLM.py  04_postprocess_LLM.py  05_semantic_LLM.py  06_iterate_LLM.py  07_postprocess_iterative.py  08_semantic_iterative.py  09_process_results.py  09a_unique_results.py  config.py
src/figures/: extended_data_figure_1.ipynb  extended_data_figure_2.ipynb  extended_data_figure_3.ipynb  extended_data_figure_4.ipynb  extended_data_figure_5.ipynb  extended_data_figure_6.ipynb  main_figure_2.ipynb  main_figure_3.ipynb  main_figure_4.ipynb  random_sample.ipynb  table_1.ipynb
src/utils/: arxiv.py  expert.py  figures.py  pdf.py  tex.py  utils.py
