[tool.poetry]
name = "llm_references"
version = "0.0.1"
description = "LLM references"
authors = ["Anonymous"]

[tool.poetry.dependencies]
python = ">=3.9"
arxiv = "1.4.4"
matplotlib = "3.5.2"
openai = "0.27.2"
pandas = "1.4.3"
pypdf2 = "3.0.1"
seaborn = "0.13.0"
thefuzz = "0.19.0"
ipykernel = "6.26.0"
networkx = "3.2.1"
scipy = "1.13.0"
